# Maglev

./: CMakeLists.txt  Maglev.drawio  Maglev.md  README.md  test  test.cc
include/: DataFusion.h  Feeds.h  KF.h  MaglevServer.h  Service.h  ServiceClient.h  SystemStatus.h
src/: Feeds.cc  KF.cc  MaglevServer.cc  Service.cc  ServiceClient.cc  SystemStatus.cc  main.cc  serial.cpp
